syntax = "proto3";

package hashing;

option go_package = "github.com/Egor-Golang-TSM-Course/final-project-vechnonetot/proto";


service HashingService {
  rpc CheckHash (CheckHashRequest) returns (CheckHashResponse) {}
  rpc GetHash (GetHashRequest) returns (GetHashResponse) {}
  rpc CreateHash (CreateHashRequest) returns (CreateHashResponse) {}
}

message CheckHashRequest {
  string hash = 1;
}

message CheckHashResponse {
  bool exists = 1;
}

message GetHashRequest {
  string hash = 1;
}

message GetHashResponse {
  string data = 1;
}

message CreateHashRequest {
  string data = 1;
}

message CreateHashResponse {
  string hash = 1;
}
